[package]
name = "dacapo-latency-dump-hdrh"
version = "0.1.0-alpha.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "dacapo-latency-dump-hdrh"

[dependencies]
glob = "0.3"
csv = "1.1"
hdrhistogram = "7.4"
rayon = "1.5"
base64 = "0.13"
indicatif = {version = "0.16", features = ["rayon"]}
